[project]
name = "devtopy"
version = "0.1.0"
description = "A Python client library for interacting with the dev.to API. Easily access key dev.to features including article retrieval, posting, and user information management."
authors = [{ name = "rmc-8.com", email = "kmyashi@rmc-8.com" }]
dependencies = ["pydantic>=2.8.2", "requests>=2.32.3"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "flake8>=7.1.0",
    "shell>=1.0.1",
    "build>=1.2.1",
    "twine>=5.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/devtopy"]
